--- a/.gitignore
+++ b/.gitignore
@@ -210,9 +210,7 @@ FakesAssemblies/
 GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
-merges/
-plugins/
-platforms/
-res/
-lib/
-www/lib/
+plugins
+merges
+lib
+platforms
