--- a/TMS/bower.json
+++ b/TMS/bower.json
@@ -7,7 +7,8 @@
     "ngCordova": "~0.1.19-alpha"
   },
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.1"
+    "ionic": "driftyco/ionic-bower#1.0.1",
+    "platform.js": "platform#^1.3.1"
   },
   "name": "EventMob",
   "private": true
