--- a/TMS/package.json
+++ b/TMS/package.json
@@ -2,9 +2,28 @@
   "name": "EventMob",
   "version": "1.0.0",
   "description": "Event Todo List for SysFreight Mobile APP",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "bower": "1.5.2"
-  }
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-device",
+    "cordova-plugin-file",
+    "cordova-plugin-file-transfer",
+    "cordova-plugin-whitelist",
+    "cordova-plugin-splashscreen",
+    "cordova-plugin-dialogs",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-console",
+    "cordova-plugin-camera",
+    "cordova-plugin-datepicker",
+    "com.ionic.keyboard",
+    "cordova-plugin-file-opener2",
+    "cordova-plugin-vibration",
+    "cordova-plugin-x-toast",
+    "cordova-plugin-app-version"
+  ],
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
